--- a/www/index.html
+++ b/www/index.html
@@ -12,6 +12,10 @@
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.inline-png-1.4.5.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.inline-svg-1.4.5.css" />
         <link rel="stylesheet" type="text/css" href="css/jquery.mobile.external-png-1.4.5.css" />
+        <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
+        <link rel="stylesheet" type="text/css" href="css/bootstrap-material-design.css" />
+        <link rel="stylesheet" type="text/css" href="css/ripples.css" />
+        <link href="//fezvrasta.github.io/snackbarjs/dist/snackbar.min.css" rel="stylesheet">
         <link rel="stylesheet" type="text/css" href="css/happinessjar.swatch.css" />
         <title>Happiness Jar</title>
 
@@ -21,8 +25,36 @@
         <script type="text/javascript" src="js/list.js"></script>
         <script type="text/javascript" src="js/list.fuzzysearch.min.js"></script>
         <script type="text/javascript" src="js/list.pagination.js"></script>
+        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+        <script type="text/javascript" src="js/material.js"></script>
+        <script type="text/javascript" src="js/ripples.js"></script>
+        <script src="//fezvrasta.github.io/snackbarjs/dist/snackbar.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/noUiSlider/6.2.0/jquery.nouislider.min.js"></script>
         <script type="text/javascript">
             app.initialize();
+        </script>
+        <script>
+            $(function () {
+                $.material.init();
+                $(".shor").noUiSlider({
+                    start: 40,
+                    connect: "lower",
+                    range: {
+                        min: 0,
+                        max: 100
+                    }
+                });
+
+                $(".svert").noUiSlider({
+                    orientation: "vertical",
+                    start: 40,
+                    connect: "lower",
+                    range: {
+                        min: 0,
+                        max: 100
+                    }
+                });
+            });
         </script>
 
     </head>
@@ -62,23 +94,53 @@
 
         <div role="main" class="ui-content">
             <div data-role="content">
-                <div class="inner-addon left-addon">
-                    <i class="glyphicon glyphicon-search"></i>
+                <div class="label-floating is-empty">
                     <form action="#categorias" id="criarCategoria">
-                        <input type="text" id="searchInput" name="categoria" class="form-control search fuzzy-search" required="" autocomplete="off" placeholder="Pesquisar ou Adicionar Categoria" value="" onkeypress="return criarNovo(event, value)" onfocus="editandoAnterior()"/>
+                        <div class="form-group label-floating is-empty">
+                            <div class="input-group">
+                                <span class="input-group-addon"><i class="glyphicon glyphicon-search"></i></span>
+                                <label class="control-label" for="searchInput">Pesquisar ou Adicionar Categoria</label>
+                                <input id="searchInput" name="categoria" class="form-control search fuzzy-search" type="text" autocomplete="off" value="" onkeypress="return criarNovo(event, value)" onfocus="editandoAnterior()">
+                                <p class="help-block">Digite o nome da <code>categoria</code> desejada.</p>
+                            </div>
+                        </div>
                     </form>
                 </div>
             </div>
             <div data-role="content">
-                <ul data-role="listview" class="list">
+                <ul data-role="listview" class="list" id="list-categoria">
                     <li>
-                        <p class="name">Trabalho</p>
+                        <p class="name" id="label-1" onclick="editandoLista(1)">Trabalho</p>
+                        <div class="jumbotron" id="botoes-1">
+                            <div class="form-group label-floating">
+                                <input class="form-control name" id="input-1" type="text" value="Trabalho">
+                                <p class="help-block">Digite como deve ser o novo nome dessa <code>categoria</code>.</p>
+                            </div>
+                            <a class="btn btn-primary btn-lg" onclick="editaCategoria(1)"><i class="glyphicon glyphicon-save"></i>&nbspGravar</a>
+                            <a class="btn btn-danger btn-lg" onclick="excluiCategoria(1)"><i class="glyphicon glyphicon-trash"></i>&nbspExcluir</a>
+                        </div>
                     </li>
                     <li>
-                        <p class="name">Amigos</p>
+                        <p class="name" id="label-2" onclick="editandoLista(2)">Amigos</p>
+                        <div class="jumbotron" id="botoes-2">
+                            <div class="form-group label-floating">
+                                <input class="form-control name" id="input-2" type="text" value="Amigos">
+                                <p class="help-block">Digite como deve ser o novo nome dessa <code>categoria</code>.</p>
+                            </div>
+                            <a class="btn btn-primary btn-lg" onclick="editaCategoria(2)"><i class="glyphicon glyphicon-save"></i>&nbspGravar</a>
+                            <a class="btn btn-danger btn-lg" onclick="excluiCategoria(2)"><i class="glyphicon glyphicon-trash"></i>&nbspExcluir</a>
+                        </div>
                     </li>
                     <li>
-                        <p class="name">Hobbies</p>
+                        <p class="name" id="label-3" onclick="editandoLista(3)">Hobbies</p>
+                        <div class="jumbotron" id="botoes-3">
+                            <div class="form-group label-floating">
+                                <input class="form-control name" id="input-3" type="text" value="Hobbies">
+                                <p class="help-block">Digite como deve ser o novo nome dessa <code>categoria</code>.</p>
+                            </div>
+                            <a class="btn btn-primary btn-lg" onclick="editaCategoria(3)"><i class="glyphicon glyphicon-save"></i>&nbspGravar</a>
+                            <a class="btn btn-danger btn-lg" onclick="excluiCategoria(3)"><i class="glyphicon glyphicon-trash"></i>&nbspExcluir</a>
+                        </div>
                     </li>
                 </ul>
             </div>
@@ -88,7 +150,7 @@
             <h1 id="orderList" class="sort" data-sort="name">
                 Ordenar Categorias Pelo Nome
             </h1>
-            <h1 id="submitForm" onclick="document.getElementById('criarCategoria').submit()" style="display: none" data-transition="slidedown">
+            <h1 id="submitForm" onclick="cadastrarCategoria()" style="display: none" data-transition="slidedown">
                 Salvar a Nova Categoria
             </h1>
         </div>
@@ -111,11 +173,33 @@
                 if(document.getElementById('input-'+idAnterior).value!=document.getElementById('label-'+idAnterior).innerHTML){
                     if(confirm('Deseja atualizar o nome da categoria '+document.getElementById('label-'+idAnterior).innerHTML+' para '+document.getElementById('input-'+idAnterior).value+'?')){
                         document.getElementById('update-'+idAnterior).submit()
+                    } else {
+                        document.getElementById('input-'+idAnterior).value = document.getElementById('label-'+idAnterior).innerHTML;
                     }
                 }
             }
             document.getElementById('submitForm').style.display='none';
             document.getElementById('orderList').style.display='block';
+        }
+
+        function editaCategoria(idAnterior){
+            if(confirm('Deseja atualizar o nome da categoria '+document.getElementById('label-'+idAnterior).innerHTML+' para '+document.getElementById('input-'+idAnterior).value+'?')){
+                alert('A categoria foi atualizada com sucesso!')
+            }
+        }
+        function cadastrarCategoria(){
+            if(confirm('Deseja cadastrar a categoria '+ document.getElementById('searchInput').value +'?')==true){
+                document.getElementById('create').submit()
+            }
+        }
+        function excluiCategoria(idAnterior){
+            if(confirm('Deseja excluir a categoria '+document.getElementById('label-'+idAnterior).innerHTML+'?')){
+                if(confirm('Quer excluir todas as felicidades dessa categoria também?')){
+                    alert('A categoria '+document.getElementById('label-'+idAnterior).innerHTML+' foi excluída do sistema junto com todas as suas felicidades relacionadas.')
+                } else {
+                    alert('A categoria '+document.getElementById('label-'+idAnterior).innerHTML+' foi excluída do sistema e suas felicidades ficaram armazenadas sem categoria.')
+                }
+            }
         }
 
         function editandoLista(id){
@@ -126,12 +210,10 @@
             idAnterior = id;
         }
         function criarNovo(e, texto){
-            //if (e.keyCode == 13) {
-            //    if(confirm('Deseja cadastrar a categoria '+ document.getElementById('searchInput').value +'?')==true){
-            //        document.getElementById('create').submit()
-            //    }
-            //}
             if (texto.length>=2){
+                if (e.keyCode == 13) {
+                    cadastrarCategoria();
+                }
                 document.getElementById('submitForm').style.display='block';
                 document.getElementById('orderList').style.display='none';
             } else if (texto.length<2) {
